# CppShell

./: CMakeLists.txt  README.md  main.cpp
Sources/: Command.cpp  Command.hpp  CommandParser.cpp  CommandParser.hpp  CustomCommand.cpp  CustomCommand.hpp  DefaultSettings.hpp  ManageChildProcess.cpp  ManageChildProcess.hpp  Shell.cpp  Shell.hpp
Sources/Builtins/: Builtin.cpp  Builtin.hpp  ChangeDirectory.cpp
